--- a/custom_components/ultimaker/manifest.json
+++ b/custom_components/ultimaker/manifest.json
@@ -3,7 +3,7 @@
   "name": "Ultimaker",
   "documentation": "https://www.home-assistant.io/integrations/ultimaker",
   "issue_tracker": "https://github.com/clews/home-assistant-ultimaker/issues",
-  "dependencies": [],
+  "dependencies": ["camera"],
   "codeowners": ["@yourusername"],
   "requirements": ["aiohttp>=3.8.0"],
   "config_flow": true,
